--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>A Pen 4 Europe</title>
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8">
+
+    // Wait for device API libraries to load
+    //
+    function onLoad() {
+        document.addEventListener("deviceready", onDeviceReady, false);
+    }
+
+    // device APIs are available
+    //
+    function onDeviceReady() {
+        // Now safe to use device APIs
+       window.location.href = 'http://www.apen4.eu';
+    }
+    </script>
+  </head>
+  <body onload="onLoad()">
+  </body>
+</html>
