--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     //
     function onDeviceReady() {
         // Now safe to use device APIs
-       /*window.location.href = 'http://www.apen4.eu';*/
-      qr=new XMLHttpRequest();
-      qr.open('get','http://www.apen4.eu');
-      qr.send();
-      qr.onreadystatechange=function(){your_div.innerHTML=this.responseText}
+       window.location.href = 'http://www.apen4.eu/about-us/';
     }
     </script>
   </head>
