--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     // Wait for device API libraries to load
     //
     function onLoad() {
-        document.addEventListener("deviceready", onDeviceReady, false);
+        location.replace("http://www.apen4.eu/about-us/");
+        /*document.addEventListener("deviceready", onDeviceReady, false);*/
     }
 
     // device APIs are available
