--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     //
     function onDeviceReady() {
        // Now safe to use device APIs
-       window.location.href = 'http://www.apen4.eu/about-us/';
+       window.location.href = 'http://www.apen4.eu/';
     }
     </script>
   </head>
