--- a/index.html
+++ b/index.html
@@ -19,8 +19,42 @@
        // Now safe to use device APIs
        window.location.href = 'http://www.apen4.eu/';
     }
+      
+    public class AndroidActivity extends DroidGap {  
+  /** Called when the activity is first created. */
+  @Override
+  public void onCreate(Bundle savedInstanceState) {
+    super.onCreate(savedInstanceState);
+
+    try
+    {
+      super.loadUrl("file:///android_asset/www/index.html");  
+      this.appView.addJavascriptInterface(new JavaScriptInterface(), "EXTERNALLINK"); 
+    }
+    catch(Exception lException)
+    {
+      throw new RuntimeException("hello hello", lException);
+    }
+  }
+
+  class JavaScriptInterface
+  {
+      public void loadExternalLink(String lUrl)
+      {          
+        try
+        {
+          loadUrl(lUrl);
+        }
+        catch(Exception lEx)
+        {
+          int i = 0;
+        }
+      }
+  }
+}
+window.EXTERNALLINK.loadExternalLink("http://www.apen4.eu");
     </script>
   </head>
-  <body onload="onLoad()">
+  <body *onload="onLoad()">
   </body>
 </html>
