--- a/index.html
+++ b/index.html
@@ -6,55 +6,15 @@
     <meta charset="utf-8">
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
-
-    // Wait for device API libraries to load
-    //
-    function onLoad() {
-        document.addEventListener("deviceready", onDeviceReady, false);
-    }
-
-    // device APIs are available
-    //
-    function onDeviceReady() {
-       // Now safe to use device APIs
-       window.location.href = 'http://www.apen4.eu/';
-    }
-      
-    public class AndroidActivity extends DroidGap {  
-  /** Called when the activity is first created. */
-  @Override
-  public void onCreate(Bundle savedInstanceState) {
+public void onCreate(Bundle savedInstanceState) {
     super.onCreate(savedInstanceState);
-
-    try
-    {
-      super.loadUrl("file:///android_asset/www/index.html");  
-      this.appView.addJavascriptInterface(new JavaScriptInterface(), "EXTERNALLINK"); 
-    }
-    catch(Exception lException)
-    {
-      throw new RuntimeException("hello hello", lException);
-    }
-  }
-
-  class JavaScriptInterface
-  {
-      public void loadExternalLink(String lUrl)
-      {          
-        try
-        {
-          loadUrl(lUrl);
-        }
-        catch(Exception lEx)
-        {
-          int i = 0;
-        }
-      }
-  }
+    super.setIntegerProperty("backgroundColor", Color.WHITE);
+    super.setStringProperty("loadingPageDialog", "Loading page...");
+    super.setBooleanProperty("loadInWebView", true);
+    super.loadUrl("file:///android_asset/www/index.html");
 }
-window.EXTERNALLINK.loadExternalLink("http://www.apen4.eu");
-    </script>
+     </script>
   </head>
-  <body *onload="onLoad()">
+  <body>
   </body>
 </html>
