--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <script type="text/javascript" charset="utf-8">
 public void onCreate(Bundle savedInstanceState) {
     super.onCreate(savedInstanceState);
-    super.setIntegerProperty("backgroundColor", Color.WHITE);
-    super.setStringProperty("loadingPageDialog", "Loading page...");
     super.setBooleanProperty("loadInWebView", true);
-    super.loadUrl("file:///android_asset/www/index.html");
+    super.loadUrl("http://www.apen4.eu");
 }
      </script>
   </head>
