--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <body>
 		<script type="text/javascript" src="cordova.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			window.open('http://www.apen4.eu/','_top','location=no',true);
+			window.open('http://www.apen4.eu/','_self','location=no');
 		</script>
 		<center><img src="loading.gif" border="0"/></center>
     </body>
