--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 			function onDeviceReady() {
 			   // Now safe to use device APIs
 			   window.open = cordova.InAppBrowser.open;
-			   window.open('http://www.apen4.eu/','_self','location=no');
+			   window.open('https://ycc.milset.org/','_self','location=no');
 			}
 		</script>
     </head>
